--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -353,7 +353,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Manage\nCategories"
+                            android:text="Personal\nCategories"
                             android:textAlignment="center"
                             android:layout_marginTop="8dp" />
 
